Добавлен redis + реализована логика просмотра баланса счетов - Добавлены ретраи и тайм-ауты для отлова ошибок при попытке просмотра redis'а и бд
